--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@babel/preset-react": "^7.9.1",
         "@babel/preset-typescript": "^7.9.0",
+        "@commitlint/cli": "^8.3.5",
+        "@commitlint/config-conventional": "^8.3.4",
         "@types/qs": "^6.9.1",
         "@types/react": "^16.9.25",
         "@types/react-dom": "^16.9.5",
@@ -64,7 +66,8 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "npm run lint"
+            "pre-commit": "npm run lint",
+            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
         }
     },
     "author": "",
