--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
         "eslint-plugin-react": "^7.19.0",
         "html-webpack-plugin": "^3.2.0",
         "husky": "^4.2.3",
+        "jest": "^25.2.4",
         "less": "^3.11.1",
         "less-loader": "^5.0.0",
         "mini-css-extract-plugin": "^0.9.0",
         "node-sass": "^4.13.1",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "prettier": "^2.0.2",
+        "react-dev-utils": "^8.0.0",
         "sass-loader": "^7.3.1",
         "style-loader": "^1.1.3",
         "stylelint": "^13.2.1",
@@ -59,8 +61,8 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.js --mode development",
-        "build": "cross-env NODE_ENV=production webpack --config build/webpack.config.js",
+        "dev": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.js --mode development",
+        "build": "cross-env NODE_ENV=production webpack --config config/webpack.config.js",
         "lint": "eslint src --ext .ts,.tsx && stylelint \"./src/**/*.scss\"",
         "lint-fix": "eslint --fix --ext .js,.ts,.tsx src/"
     },
