--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,10 @@
             "@shared/*": ["containers/shared/*"],
             "@store/*": ["store/*"],
             "@utils/*": ["utils/*"],
-            "@assets/*": ["assets/*"]
-        }
+            "@assets/*": ["assets/*"],
+            "@modules/*": ["modules/*"]
+        },
+        "suppressImplicitAnyIndexErrors": true
     },
     "include": ["src"],
     "resolve": {
