improvement: update url and settings helper

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,9 @@
             "@store/*": ["store/*"],
             "@utils/*": ["utils/*"],
             "@assets/*": ["assets/*"],
-            "@modules/*": ["modules/*"]
+            "@modules/*": ["modules/*"],
+            "@api/*": ["api/*"],
+            "@commons/*": ["commons/*"]
         },
         "suppressImplicitAnyIndexErrors": true
     },
