--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-    "name": "ts-blog",
+    "name": "annotation",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "publicfolder": "/annotation-gui",
     "dependencies": {
         "antd": "^4.0.4",
         "axios": "^0.19.2",
